--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.9",
+    "apexcharts": "^3.46.0",
     "axios": "^1.8.1",
     "flowbite": "^3.1.2",
     "react": "^19.0.0",
