Changed design of product card and product details level

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.9",
     "apexcharts": "^3.46.0",
-    "axios": "^1.8.1",
+    "axios": "^1.8.3",
     "flowbite": "^3.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
